✨feat: Add endpoints to enable and disable short links
